<resources>
    <string name="app_name">NotesApp</string>
    <string name="my_notes">NotesApp</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_your_note">Type your note..</string>
    <string name="menu">Options</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add_link">ADD</string>
    <string name="cancel_link">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profile" />
</resources>