<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAddUrlContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:padding="@dimen/_8sdp"
    android:background="@drawable/background_dialog"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/imageAddURL"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="@dimen/_8ssp"
        android:layout_marginStart="@dimen/_8ssp"
        android:src="@drawable/ic_web_link"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/add_url"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toTopOf="@id/imageAddURL"
        app:layout_constraintStart_toEndOf="@id/imageAddURL"
        app:layout_constraintBottom_toBottomOf="@id/imageAddURL"
        app:layout_constraintEnd_toEndOf="parent"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntu_bold" />

    <EditText
        android:id="@+id/inputURL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@null"
        android:hint="@string/enter_url"
        android:fontFamily="@font/ubuntu_regular"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/imageAddURL"
        android:gravity="center_vertical"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_13ssp"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:inputType="textUri" />

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_link"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/colorNoteColor2"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntu_bold"
        android:padding="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/inputURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_link"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/colorNoteColor2"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntu_bold"
        android:padding="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/inputURL"
        app:layout_constraintEnd_toStartOf="@id/textAdd"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>