<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_marginBottom="@dimen/_40sdp"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:tint="@color/colorIcons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imageSave"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/background_done_button"
                android:contentDescription="@string/app_name"
                app:tint="@color/colorIcons"
                android:src="@drawable/ic_done"
                android:padding="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintTop_toTopOf="@id/imageBack" />

            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:hint="@string/note_title"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="@dimen/_16ssp"
                android:imeOptions="actionDone"
                android:includeFontPadding="false"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/imageBack"/>

            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"/>

            <EditText
                android:id="@+id/inputNoteSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/colorNoteSubText"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/note_subtitle"
                android:fontFamily="@font/ubuntu_medium"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/textDateTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/viewSubIndicator" />

            <View
                android:id="@+id/viewSubIndicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/inputNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputNoteSubtitle"/>

            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toBottomOf="@id/inputNoteSubtitle"/>

            <ImageView
                android:id="@+id/deleteImage"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_delete"
                app:tint="@color/colorWhite"
                android:background="@drawable/background_delete"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintTop_toTopOf="@id/imageNote"
                app:layout_constraintEnd_toEndOf="@id/imageNote"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/layoutWebURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageNote"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:visibility="gone"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textWebURL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_13ssp"
                    android:autoLink="web"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/ubuntu_regular"/>

                <ImageView
                    android:id="@+id/deleteURL"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/colorDel"
                    android:layout_marginEnd="@dimen/_8sdp" />

            </LinearLayout>

            <EditText
                android:id="@+id/inputNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/type_your_note"
                android:inputType="textMultiLine"
                android:includeFontPadding="false"
                android:importantForAutofill="no"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:minHeight="@dimen/_100sdp"
                android:background="@null"
                android:gravity="top"
                app:layout_constraintTop_toBottomOf="@id/layoutWebURL"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/layout_misc"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>