<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMisc"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_misc"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textMisc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:text="@string/menu"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:text="Pick Color"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"
            android:includeFontPadding="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_1"
                android:layout_marginStart="@dimen/_5sdp"/>

            <ImageView
                android:id="@+id/imageColor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_done"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_2"
                android:layout_marginStart="@dimen/_5sdp"/>

            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_3"
                android:layout_marginStart="@dimen/_5sdp"/>

            <ImageView
                android:id="@+id/imageColor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_4"
                android:layout_marginStart="@dimen/_5sdp"/>

            <ImageView
                android:id="@+id/imageColor4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_5"
                android:layout_marginStart="@dimen/_5sdp"/>

            <ImageView
                android:id="@+id/imageColor5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:tint="@color/colorWhite" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:gravity="center_vertical">

        <FrameLayout
            android:id="@+id/layoutAddImageFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/addImage"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/ic_image"
                app:tint="@color/colorIcons" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:textSize="@dimen/_13ssp"
                android:layout_marginStart="@dimen/_34sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:textColor="@color/colorIcons"
                android:includeFontPadding="false"
                android:fontFamily="@font/ubuntu_medium" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <FrameLayout
            android:id="@+id/layoutAddUrlFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_web_link"
                app:tint="@color/colorIcons" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add URL"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/colorIcons"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5ssp"
                android:includeFontPadding="false"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/layoutDeleteNoteFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_delete"
                app:tint="@color/colorDel"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/textDeleteNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/delete_note"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutShareNote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/layoutShareNoteFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_share"
                app:tint="@color/colorIcons"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/textShareNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="Share Note"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/layoutExportNoteFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_export"
                app:tint="@color/colorIcons"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/textExportNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="Export as PDF"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false" />

        </FrameLayout>

    </LinearLayout>


</LinearLayout>